Clean up index.html

--- a/src/site/index.html
+++ b/src/site/index.html
@@ -13,8 +13,7 @@
     </script>
   </head>
   <body>
-    <a href="latest/api">Go to the project documentation
-    </a>
+    <a href="latest/api">Go to the project documentation</a>
   </body>
 </html>
 
