Refactor Pipeline into its own package, add versioning to ScalaDoc

--- a/src/site-preprocess/index.html
+++ b/src/site-preprocess/index.html
@@ -6,14 +6,16 @@
     <script language="JavaScript">
     <!--
     function doRedirect() {
-      window.location.replace("latest/api");
+      window.location.replace("api/@VERSION@");
     }
     doRedirect();
     //-->
     </script>
   </head>
   <body>
-    <a href="latest/api">Go to the project documentation</a>
+    <h1>
+      The latest version is: <a href="api/@VERSION@">@VERSION@</a>
+    </h1>
   </body>
 </html>
 
