--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script language="JavaScript">
     <!--
     function doRedirect() {
-      window.location.replace("api/0.8.0");
+      window.location.replace("api/0.8.0/#com.sony.prometheus.package");
     }
     doRedirect();
     //-->
@@ -14,7 +14,7 @@
   </head>
   <body>
     <h1>
-      The latest version is: <a href="api/0.8.0">0.8.0</a>
+      The latest version is: <a href="api/0.8.0/#com.sony.prometheus.package">0.8.0</a>
     </h1>
   </body>
 </html>
