--- a/src/site-preprocess/index.html
+++ b/src/site-preprocess/index.html
@@ -6,7 +6,7 @@
     <script language="JavaScript">
     <!--
     function doRedirect() {
-      window.location.replace("api/@VERSION@");
+      window.location.replace("api/@VERSION@/#com.sony.prometheus.package");
     }
     doRedirect();
     //-->
@@ -14,7 +14,7 @@
   </head>
   <body>
     <h1>
-      The latest version is: <a href="api/@VERSION@">@VERSION@</a>
+      The latest version is: <a href="api/@VERSION@/#com.sony.prometheus.package">@VERSION@</a>
     </h1>
   </body>
 </html>
